--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -5,6 +5,7 @@
         <aside class="actions">
             {% if user.is_authenticated %}
                 <a class="btn btn-secondary" href="{% url 'post_edit' pk=post.pk %}">
+                <a class="btn btn-default" href="<div data-gb-custom-block data-tag="url" data-0='post_remove'></div>"><span class="glyphicon glyphicon-remove"></span></a>
                     {% include './icons/pencil-fill.svg' %}
                 </a>
             {% endif %}
@@ -17,4 +18,22 @@
         <h2>{{ post.title }}</h2>
         <p>{{ post.text|linebreaksbr }}</p>
     </article>
+    
+    <hr>
+    <a class="btn btn-default" href="<div data-gb-custom-block data-tag="url" data-0='add_comment_to_post'></div>
+
+    ">Add comment</a>
+    <div data-gb-custom-block data-tag="for"></div>
+
+        <div class="comment">
+            <div class="date">{{ comment.created_date }}</div>
+            <strong>{{ comment.author }}</strong>
+            <p>{{ comment.text|linebreaks }}</p>
+        </div>
+
+    <div data-gb-custom-block data-tag="empty">
+
+        <p>No comments here yet :(</p>
+
+    </div>
 {% endblock %}
